# gst-multifocus

./: .gitignore  AUTHORS  ChangeLog  README  README.md  configure.ac  meson.build
src/: Makefile.am  gstmultifocus.c  gstmultifocus.h  i2c.c  i2c_control.c  i2c_control.h  logger.c  logger.h  multifocusControl.c  multifocusControl.h
